# TSE-bot

image_bot/: Dockerfile  __init__.py  config.py  docker-compose.yml  pyproject.toml
image_bot/cogs/: sync.py
image_bot/image_bot/: main.py  models.py
image_bot/image_bot/cogs/: image_collection.py
